--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,8 @@ subprojects { project ->
   test {
     jvmArgs += "-Dlistener=okhttp3.testing.InstallUncaughtExceptionHandlerListener"
     jvmArgs += "-Dokhttp.platform=platform"
+
+    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
   }
 
   // Add alpn-boot on Java 8 so we can use HTTP/2 without a stable API.
