Convert some basic types to Kotlin
okhttp/src/main/java/okhttp3/Authenticator.java
okhttp/src/main/java/okhttp3/Call.java
okhttp/src/main/java/okhttp3/Callback.java
okhttp/src/main/java/okhttp3/Connection.java
okhttp/src/main/java/okhttp3/CookieJar.java
okhttp/src/main/java/okhttp3/Dns.java
okhttp/src/main/java/okhttp3/EventListener.java
okhttp/src/main/java/okhttp3/Interceptor.java
okhttp/src/main/java/okhttp3/Protocol.java
okhttp/src/main/java/okhttp3/TlsVersion.java
okhttp/src/main/java/okhttp3/WebSocket.java
okhttp/src/main/java/okhttp3/WebSocketListener.java

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -23,6 +23,7 @@ task copyJavaTemplates(type: Copy) {
 
 dependencies {
   api deps.okio
+  api deps.kotlinStdlib
   compileOnly deps.conscrypt
   compileOnly deps.android
   compileOnly deps.jsr305
@@ -41,5 +42,8 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
   txtOutputFile = file("$buildDir/reports/japi.txt")
   ignoreMissingClasses = true
   includeSynthetic = true
+  methodExcludes = [
+      'okhttp3.TlsVersion#javaName()', // Became 'final' in 4.0.0.
+  ]
 }
 check.dependsOn(japicmp)
