--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
       'jnrUnixsocket': '0.22',
       'jsoup': '1.11.3',
       'junit': '4.12',
+      'kotlin': '1.3.20',
       'moshi': '1.8.0',
       'okio': '1.17.2',
   ]
@@ -29,6 +30,7 @@ buildscript {
       'jsoup': "org.jsoup:jsoup:${versions.jsoup}",
       'jsr305': "com.google.code.findbugs:jsr305:${versions.findbugs}",
       'junit': "junit:junit:${versions.junit}",
+      'kotlinStdlib': "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}",
       'moshi': "com.squareup.moshi:moshi:${versions.moshi}",
       'okio': "com.squareup.okio:okio:${versions.okio}"
   ]
@@ -36,6 +38,7 @@ buildscript {
   dependencies {
     // TODO(jwilson): configure maven-publish-plugin to limit which artifacts are published.
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.8.0'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
   }
 
   repositories {
@@ -62,6 +65,7 @@ allprojects {
 subprojects { project ->
   apply plugin: 'java'
   apply plugin: 'java-library'
+  apply plugin: 'org.jetbrains.kotlin.platform.jvm'
   sourceCompatibility = JavaVersion.VERSION_1_8
   targetCompatibility = JavaVersion.VERSION_1_8
 
