HttpUrl in Kotlin

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -43,7 +43,71 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
   ignoreMissingClasses = true
   includeSynthetic = true
   methodExcludes = [
-      'okhttp3.TlsVersion#javaName()', // Became 'final' in 4.0.0.
+      // Became 'final' in 4.0.0:
+      'okhttp3.TlsVersion#javaName()',
+      'okhttp3.FormBody#encodedName()',
+      'okhttp3.FormBody#encodedValue()',
+      'okhttp3.FormBody#name()',
+      'okhttp3.FormBody#size()',
+      'okhttp3.FormBody#value()',
+      'okhttp3.FormBody$Builder#add()',
+      'okhttp3.FormBody$Builder#addEncoded()',
+      'okhttp3.FormBody$Builder#build()',
+      'okhttp3.HttpUrl#encodedFragment()',
+      'okhttp3.HttpUrl#encodedPassword()',
+      'okhttp3.HttpUrl#encodedPath()',
+      'okhttp3.HttpUrl#encodedPathSegments()',
+      'okhttp3.HttpUrl#encodedQuery()',
+      'okhttp3.HttpUrl#encodedUsername()',
+      'okhttp3.HttpUrl#fragment()',
+      'okhttp3.HttpUrl#host()',
+      'okhttp3.HttpUrl#isHttps()',
+      'okhttp3.HttpUrl#newBuilder()',
+      'okhttp3.HttpUrl#newBuilder()',
+      'okhttp3.HttpUrl#password()',
+      'okhttp3.HttpUrl#pathSegments()',
+      'okhttp3.HttpUrl#pathSize()',
+      'okhttp3.HttpUrl#port()',
+      'okhttp3.HttpUrl#query()',
+      'okhttp3.HttpUrl#queryParameter()',
+      'okhttp3.HttpUrl#queryParameterName()',
+      'okhttp3.HttpUrl#queryParameterNames()',
+      'okhttp3.HttpUrl#queryParameterValue()',
+      'okhttp3.HttpUrl#queryParameterValues()',
+      'okhttp3.HttpUrl#querySize()',
+      'okhttp3.HttpUrl#redact()',
+      'okhttp3.HttpUrl#resolve()',
+      'okhttp3.HttpUrl#scheme()',
+      'okhttp3.HttpUrl#topPrivateDomain()',
+      'okhttp3.HttpUrl#uri()',
+      'okhttp3.HttpUrl#url()',
+      'okhttp3.HttpUrl#username()',
+      'okhttp3.HttpUrl$Builder#addEncodedPathSegment()',
+      'okhttp3.HttpUrl$Builder#addEncodedPathSegments()',
+      'okhttp3.HttpUrl$Builder#addEncodedQueryParameter()',
+      'okhttp3.HttpUrl$Builder#addPathSegment()',
+      'okhttp3.HttpUrl$Builder#addPathSegments()',
+      'okhttp3.HttpUrl$Builder#addQueryParameter()',
+      'okhttp3.HttpUrl$Builder#build()',
+      'okhttp3.HttpUrl$Builder#encodedFragment()',
+      'okhttp3.HttpUrl$Builder#encodedPassword()',
+      'okhttp3.HttpUrl$Builder#encodedPath()',
+      'okhttp3.HttpUrl$Builder#encodedQuery()',
+      'okhttp3.HttpUrl$Builder#encodedUsername()',
+      'okhttp3.HttpUrl$Builder#fragment()',
+      'okhttp3.HttpUrl$Builder#host()',
+      'okhttp3.HttpUrl$Builder#password()',
+      'okhttp3.HttpUrl$Builder#port()',
+      'okhttp3.HttpUrl$Builder#query()',
+      'okhttp3.HttpUrl$Builder#removeAllEncodedQueryParameters()',
+      'okhttp3.HttpUrl$Builder#removeAllQueryParameters()',
+      'okhttp3.HttpUrl$Builder#removePathSegment()',
+      'okhttp3.HttpUrl$Builder#scheme()',
+      'okhttp3.HttpUrl$Builder#setEncodedPathSegment()',
+      'okhttp3.HttpUrl$Builder#setEncodedQueryParameter()',
+      'okhttp3.HttpUrl$Builder#setPathSegment()',
+      'okhttp3.HttpUrl$Builder#setQueryParameter()',
+      'okhttp3.HttpUrl$Builder#username()',
   ]
 }
 check.dependsOn(japicmp)
