--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -42,6 +42,9 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
   txtOutputFile = file("$buildDir/reports/japi.txt")
   ignoreMissingClasses = true
   includeSynthetic = true
+  packageExcludes = [
+      'okhttp3.internal',
+  ]
   methodExcludes = [
       // Became 'final' in 4.0.0:
       'okhttp3.TlsVersion#javaName()',
