--- a/okhttp-hpacktests/build.gradle
+++ b/okhttp-hpacktests/build.gradle
@@ -5,5 +5,7 @@ dependencies {
   testImplementation project(':okhttp-testing-support')
   testImplementation project(':mockwebserver')
   testImplementation deps.junit
+  testImplementation deps.junitApi
+  testRuntimeOnly deps.junitEngine
   testImplementation deps.assertj
 }
