--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
       'jnrUnixsocket': '0.22',
       'jsoup': '1.11.3',
       'junit': '4.12',
+      'junit5': '5.4.1',
       'kotlin': '1.3.20',
       'moshi': '1.8.0',
       'okio': '1.17.2',
@@ -29,10 +30,13 @@ buildscript {
       'jnrUnixsocket': "com.github.jnr:jnr-unixsocket:${versions.jnrUnixsocket}",
       'jsoup': "org.jsoup:jsoup:${versions.jsoup}",
       'jsr305': "com.google.code.findbugs:jsr305:${versions.findbugs}",
-      'junit': "junit:junit:${versions.junit}",
       'kotlinStdlib': "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}",
       'moshi': "com.squareup.moshi:moshi:${versions.moshi}",
-      'okio': "com.squareup.okio:okio:${versions.okio}"
+      'okio': "com.squareup.okio:okio:${versions.okio}",
+      'junit': "junit:junit:${versions.junit}",
+      'junitEngine': "org.junit.vintage:junit-vintage-engine:${versions.junit5}",
+      'junitApi': "org.junit.jupiter:junit-jupiter-api:${versions.junit5}",
+      'junitJupiterEngine': "org.junit.jupiter:junit-jupiter-engine:${versions.junit5}"
   ]
 
   dependencies {
@@ -91,6 +95,8 @@ subprojects { project ->
   }
 
   test {
+    useJUnitPlatform()
+
     jvmArgs += "-Dlistener=okhttp3.testing.InstallUncaughtExceptionHandlerListener"
     jvmArgs += "-Dokhttp.platform=platform"
 
