--- a/okhttp-tls/build.gradle
+++ b/okhttp-tls/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 
   testImplementation project(':okhttp-testing-support')
   testImplementation deps.junit
+  testImplementation deps.junitApi
+  testRuntimeOnly deps.junitEngine
   testImplementation deps.assertj
 }
 
