--- a/okhttp-urlconnection/build.gradle
+++ b/okhttp-urlconnection/build.gradle
@@ -15,6 +15,8 @@ dependencies {
   testImplementation project(':okhttp-tls')
   testImplementation project(':mockwebserver')
   testImplementation deps.junit
+  testImplementation deps.junitApi
+  testRuntimeOnly deps.junitEngine
   testImplementation deps.assertj
 }
 
