--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -45,8 +45,8 @@ apply plugin: 'me.champeau.gradle.japicmp'
 task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
   oldClasspath = files(baselineJar(project, baselineVersion))
   newClasspath = files(jar.archivePath)
-  onlyBinaryIncompatibleModified = false
-  failOnModification = false
+  onlyBinaryIncompatibleModified = true
+  failOnModification = true
   txtOutputFile = file("$buildDir/reports/japi.txt")
   ignoreMissingClasses = true
   includeSynthetic = true
