Add ConnectionPool methods to Japicmp excludes

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -68,6 +68,9 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.CacheControl$Builder#noStore()',
       'okhttp3.CacheControl$Builder#noTransform()',
       'okhttp3.CacheControl$Builder#onlyIfCached()',
+      'okhttp3.ConnectionPool#connectionCount()',
+      'okhttp3.ConnectionPool#evictAll()',
+      'okhttp3.ConnectionPool#idleConnectionCount()',
       'okhttp3.FormBody#encodedName(int)',
       'okhttp3.FormBody#encodedValue(int)',
       'okhttp3.FormBody#name(int)',
