Convert Cookie to Kotlin

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -71,6 +71,25 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.ConnectionPool#connectionCount()',
       'okhttp3.ConnectionPool#evictAll()',
       'okhttp3.ConnectionPool#idleConnectionCount()',
+      'okhttp3.Cookie#domain()',
+      'okhttp3.Cookie#expiresAt()',
+      'okhttp3.Cookie#hostOnly()',
+      'okhttp3.Cookie#httpOnly()',
+      'okhttp3.Cookie#matches(okhttp3.HttpUrl)',
+      'okhttp3.Cookie#name()',
+      'okhttp3.Cookie#path()',
+      'okhttp3.Cookie#persistent()',
+      'okhttp3.Cookie#secure()',
+      'okhttp3.Cookie#value()',
+      'okhttp3.Cookie$Builder#build()',
+      'okhttp3.Cookie$Builder#domain(java.lang.String)',
+      'okhttp3.Cookie$Builder#expiresAt(long)',
+      'okhttp3.Cookie$Builder#hostOnlyDomain(java.lang.String)',
+      'okhttp3.Cookie$Builder#httpOnly()',
+      'okhttp3.Cookie$Builder#name(java.lang.String)',
+      'okhttp3.Cookie$Builder#path(java.lang.String)',
+      'okhttp3.Cookie$Builder#secure()',
+      'okhttp3.Cookie$Builder#value(java.lang.String)',
       'okhttp3.FormBody#encodedName(int)',
       'okhttp3.FormBody#encodedValue(int)',
       'okhttp3.FormBody#name(int)',
