Convert Headers to Kotlin

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -98,6 +98,29 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.FormBody$Builder#add(java.lang.String, java.lang.String)',
       'okhttp3.FormBody$Builder#addEncoded(java.lang.String, java.lang.String)',
       'okhttp3.FormBody$Builder#build()',
+      'okhttp3.Headers#byteCount()',
+      'okhttp3.Headers#get(java.lang.String)',
+      'okhttp3.Headers#getDate(java.lang.String)',
+      'okhttp3.Headers#getInstant(java.lang.String)',
+      'okhttp3.Headers#name(int)',
+      'okhttp3.Headers#names()',
+      'okhttp3.Headers#newBuilder()',
+      'okhttp3.Headers#size()',
+      'okhttp3.Headers#toMultimap()',
+      'okhttp3.Headers#value(int)',
+      'okhttp3.Headers#values(java.lang.String)',
+      'okhttp3.Headers$Builder#add(java.lang.String)',
+      'okhttp3.Headers$Builder#add(java.lang.String, java.lang.String)',
+      'okhttp3.Headers$Builder#add(java.lang.String, java.util.Date)',
+      'okhttp3.Headers$Builder#add(java.lang.String, java.time.Instant)',
+      'okhttp3.Headers$Builder#addAll(okhttp3.Headers)',
+      'okhttp3.Headers$Builder#addUnsafeNonAscii(java.lang.String, java.lang.String)',
+      'okhttp3.Headers$Builder#build()',
+      'okhttp3.Headers$Builder#get(java.lang.String)',
+      'okhttp3.Headers$Builder#removeAll(java.lang.String)',
+      'okhttp3.Headers$Builder#set(java.lang.String, java.util.Date)',
+      'okhttp3.Headers$Builder#set(java.lang.String, java.time.Instant)',
+      'okhttp3.Headers$Builder#set(java.lang.String, java.lang.String)',
       'okhttp3.HttpUrl#encodedFragment()',
       'okhttp3.HttpUrl#encodedPassword()',
       'okhttp3.HttpUrl#encodedPath()',
