--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -180,6 +180,10 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.MediaType#charset(java.nio.charset.Charset)',
       'okhttp3.MediaType#subtype()',
       'okhttp3.MediaType#type()',
+      'okhttp3.Route#address()',
+      'okhttp3.Route#proxy()',
+      'okhttp3.Route#requiresTunnel()',
+      'okhttp3.Route#socketAddress()',
       'okhttp3.TlsVersion#javaName()',
   ]
 }
