Convert Handshake to Kotlin

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -106,6 +106,12 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.FormBody$Builder#add(java.lang.String, java.lang.String)',
       'okhttp3.FormBody$Builder#addEncoded(java.lang.String, java.lang.String)',
       'okhttp3.FormBody$Builder#build()',
+      'okhttp3.Handshake#cipherSuite()',
+      'okhttp3.Handshake#localCertificates()',
+      'okhttp3.Handshake#localPrincipal()',
+      'okhttp3.Handshake#peerCertificates()',
+      'okhttp3.Handshake#tlsVersion()',
+      'okhttp3.Handshake#peerPrincipal()',
       'okhttp3.Headers#byteCount()',
       'okhttp3.Headers#get(java.lang.String)',
       'okhttp3.Headers#getDate(java.lang.String)',
