--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -29,8 +29,16 @@ dependencies {
   compileOnly deps.jsr305
   compileOnly deps.animalSniffer
 
+  testImplementation deps.okio
+  testImplementation project(':okhttp-testing-support')
+  testImplementation project(':okhttp-tls')
+  testImplementation project(':okhttp-urlconnection')
+  testImplementation project(':mockwebserver')
+  testImplementation project(':okhttp-logging-interceptor')
+  testImplementation deps.conscrypt
   testImplementation deps.junit
   testImplementation deps.assertj
+  testCompileOnly deps.jsr305
 }
 
 apply plugin: 'me.champeau.gradle.japicmp'
