Convert Address to Kotlin (#4787)
* Convert Address to Kotlin

* Rerun japicmp

* Make equalsNonHost internal after test

* More idiomatic Kotlin

* Fix compile failure

* Make equalsNonhost static in InternalKt

* Bad rebase

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -98,6 +98,17 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.Cookie$Builder#path(java.lang.String)',
       'okhttp3.Cookie$Builder#secure()',
       'okhttp3.Cookie$Builder#value(java.lang.String)',
+      'okhttp3.Address#certificatePinner()',
+      'okhttp3.Address#connectionSpecs()',
+      'okhttp3.Address#dns()',
+      'okhttp3.Address#hostnameVerifier()',
+      'okhttp3.Address#protocols()',
+      'okhttp3.Address#proxy()',
+      'okhttp3.Address#proxyAuthenticator()',
+      'okhttp3.Address#proxySelector()',
+      'okhttp3.Address#sslSocketFactory()',
+      'okhttp3.Address#url()',
+      'okhttp3.Address#socketFactory()',
       'okhttp3.FormBody#encodedName(int)',
       'okhttp3.FormBody#encodedValue(int)',
       'okhttp3.FormBody#name(int)',
