Convert Challenge to Kotlin

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -76,6 +76,11 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.CacheControl$Builder#noStore()',
       'okhttp3.CacheControl$Builder#noTransform()',
       'okhttp3.CacheControl$Builder#onlyIfCached()',
+      'okhttp3.Challenge#scheme()',
+      'okhttp3.Challenge#authParams()',
+      'okhttp3.Challenge#realm()',
+      'okhttp3.Challenge#charset()',
+      'okhttp3.Challenge#withCharset(java.nio.charset.Charset)',
       'okhttp3.ConnectionPool#connectionCount()',
       'okhttp3.ConnectionPool#evictAll()',
       'okhttp3.ConnectionPool#idleConnectionCount()',
