--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,18 @@ subprojects { project ->
   }
 
   test {
+    testLogging {
+      showStandardStreams = true
+    }
+  }
+
+  test {
+    filter {
+      includeTestsMatching "okhttp3.EventListenerTest.requestBodyFailHttp*"
+    }
+  }
+
+  test {
     jvmArgs += "-Dlistener=okhttp3.testing.InstallUncaughtExceptionHandlerListener"
     jvmArgs += "-Dokhttp.platform=platform"
   }
