--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jdk:
   - openjdk11
 
 script:
- - ./gradlew check
+  - ./gradlew :okhttp:test --tests EventListenerTest
 
 after_success:
   - .buildscript/deploy_snapshot.sh
