Revert "Measure time"
This reverts commit 853a80d3ff56facc18ed3efcec32fcc9eb959dc9.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jdk:
   - openjdk11
 
 script:
-  - ./gradlew :okhttp:test --tests EventListenerTest
+ - ./gradlew check
 
 after_success:
   - .buildscript/deploy_snapshot.sh
