Fix some broken API checks and test cases

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -246,6 +246,42 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.MediaType#charset(java.nio.charset.Charset)',
       'okhttp3.MediaType#subtype()',
       'okhttp3.MediaType#type()',
+      'okhttp3.OkHttpClient$Builder#addInterceptor(okhttp3.Interceptor)',
+      'okhttp3.OkHttpClient$Builder#addNetworkInterceptor(okhttp3.Interceptor)',
+      'okhttp3.OkHttpClient$Builder#authenticator(okhttp3.Authenticator)',
+      'okhttp3.OkHttpClient$Builder#build()',
+      'okhttp3.OkHttpClient$Builder#cache(okhttp3.Cache)',
+      'okhttp3.OkHttpClient$Builder#callTimeout(long, java.util.concurrent.TimeUnit)',
+      'okhttp3.OkHttpClient$Builder#callTimeout(java.time.Duration)',
+      'okhttp3.OkHttpClient$Builder#certificatePinner(okhttp3.CertificatePinner)',
+      'okhttp3.OkHttpClient$Builder#connectionPool(okhttp3.ConnectionPool)',
+      'okhttp3.OkHttpClient$Builder#connectionSpecs(java.util.List)',
+      'okhttp3.OkHttpClient$Builder#connectTimeout(long, java.util.concurrent.TimeUnit)',
+      'okhttp3.OkHttpClient$Builder#connectTimeout(java.time.Duration)',
+      'okhttp3.OkHttpClient$Builder#cookieJar(okhttp3.CookieJar)',
+      'okhttp3.OkHttpClient$Builder#dispatcher(okhttp3.Dispatcher)',
+      'okhttp3.OkHttpClient$Builder#dns(okhttp3.Dns)',
+      'okhttp3.OkHttpClient$Builder#eventListener(okhttp3.EventListener)',
+      'okhttp3.OkHttpClient$Builder#eventListenerFactory(okhttp3.EventListener$Factory)',
+      'okhttp3.OkHttpClient$Builder#followRedirects(boolean)',
+      'okhttp3.OkHttpClient$Builder#followSslRedirects(boolean)',
+      'okhttp3.OkHttpClient$Builder#hostnameVerifier(javax.net.ssl.HostnameVerifier)',
+      'okhttp3.OkHttpClient$Builder#interceptors()',
+      'okhttp3.OkHttpClient$Builder#networkInterceptors()',
+      'okhttp3.OkHttpClient$Builder#pingInterval(long, java.util.concurrent.TimeUnit)',
+      'okhttp3.OkHttpClient$Builder#pingInterval(java.time.Duration)',
+      'okhttp3.OkHttpClient$Builder#protocols(java.util.List)',
+      'okhttp3.OkHttpClient$Builder#proxy(java.net.Proxy)',
+      'okhttp3.OkHttpClient$Builder#proxyAuthenticator(okhttp3.Authenticator)',
+      'okhttp3.OkHttpClient$Builder#proxySelector(java.net.ProxySelector)',
+      'okhttp3.OkHttpClient$Builder#readTimeout(long, java.util.concurrent.TimeUnit)',
+      'okhttp3.OkHttpClient$Builder#readTimeout(java.time.Duration)',
+      'okhttp3.OkHttpClient$Builder#retryOnConnectionFailure(boolean)',
+      'okhttp3.OkHttpClient$Builder#socketFactory(javax.net.SocketFactory)',
+      'okhttp3.OkHttpClient$Builder#sslSocketFactory(javax.net.ssl.SSLSocketFactory)',
+      'okhttp3.OkHttpClient$Builder#sslSocketFactory(javax.net.ssl.SSLSocketFactory, javax.net.ssl.X509TrustManager)',
+      'okhttp3.OkHttpClient$Builder#writeTimeout(long, java.util.concurrent.TimeUnit)',
+      'okhttp3.OkHttpClient$Builder#writeTimeout(java.time.Duration)',
       'okhttp3.RealCall#getResponseWithInterceptorChain()',
       'okhttp3.RealCall#redactedUrl()',
       'okhttp3.RealCall#toLoggableString()',
