--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
             - v1-dependencies-
 
       - run:
-          name: check
+          name: Run checks
           command: ./gradlew check -x test
           environment:
             GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.parallel=false -Xmx1G
@@ -62,6 +62,7 @@ jobs:
           when: always
 
       - store_artifacts:
+          name: Store gradle reports
           path: ~/reports
 
   testjdk8:
@@ -96,10 +97,19 @@ jobs:
           when: always
 
       - store_test_results:
+          name: Store test results
           path: ~/test-results
 
+      - run:
+          name: Save gradle reports
+          command: |
+            mkdir -p ~/reports/
+            tar cf - */build/reports | (cd ~/reports/; tar xf -)
+          when: always
+
       - store_artifacts:
-          path: ~/test-results/junit
+          name: Store gradle reports
+          path: ~/reports
 workflows:
   build-check-and-test:
     jobs:
