Exclude Request/Response now-explicitly final methods from japi
The classes were final already, so this is a false positive

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -291,6 +291,39 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.RealCall$AsyncCall#host()',
       'okhttp3.RealCall$AsyncCall#request()',
       'okhttp3.RealCall$AsyncCall#reuseCallsPerHostFrom(okhttp3.RealCall$AsyncCall)',
+      'okhttp3.Request#body()',
+      'okhttp3.Request#cacheControl()',
+      'okhttp3.Request#header(java.lang.String)',
+      'okhttp3.Request#headers()',
+      'okhttp3.Request#headers(java.lang.String)',
+      'okhttp3.Request#isHttps()',
+      'okhttp3.Request#method()',
+      'okhttp3.Request#newBuilder()',
+      'okhttp3.Request#tag()',
+      'okhttp3.Request#tag(java.lang.Class)',
+      'okhttp3.Request#url()',
+      'okhttp3.Response#body()',
+      'okhttp3.Response#cacheControl()',
+      'okhttp3.Response#cacheResponse()',
+      'okhttp3.Response#challenges()',
+      'okhttp3.Response#code()',
+      'okhttp3.Response#handshake()',
+      'okhttp3.Response#header(java.lang.String)',
+      'okhttp3.Response#header(java.lang.String, java.lang.String)',
+      'okhttp3.Response#headers(java.lang.String)',
+      'okhttp3.Response#headers()',
+      'okhttp3.Response#isRedirect()',
+      'okhttp3.Response#isSuccessful()',
+      'okhttp3.Response#message()',
+      'okhttp3.Response#networkResponse()',
+      'okhttp3.Response#newBuilder()',
+      'okhttp3.Response#peekBody(long)',
+      'okhttp3.Response#priorResponse()',
+      'okhttp3.Response#protocol()',
+      'okhttp3.Response#receivedResponseAtMillis()',
+      'okhttp3.Response#request()',
+      'okhttp3.Response#sentRequestAtMillis()',
+      'okhttp3.Response#trailers()',
       'okhttp3.Route#address()',
       'okhttp3.Route#proxy()',
       'okhttp3.Route#requiresTunnel()',
