--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
             - v1-dependencies-{{ checksum "build.gradle" }}
             - v1-dependencies-
 
-      - run: 
+      - run:
           name: dependencies
           command: ./gradlew downloadDependencies
           environment:
@@ -110,7 +110,55 @@ jobs:
       - store_artifacts:
           name: Store gradle reports
           path: ~/reports
+
+  testjdk11:
+    docker:
+      - image: circleci/openjdk:11.0.2-jdk
+
+    working_directory: ~/testrepo11
+
+    environment:
+      JVM_OPTS: -Xmx1g
+      TERM: dumb
+
+    steps:
+      - checkout
+
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "build.gradle" }}
+            - v1-dependencies-
+
+      - run:
+          name: test
+          command: ./gradlew test
+          environment:
+            GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.parallel=false -Xmx1G
+
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/testrepo11/test-results/junit/
+            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/testrepo11/test-results/junit/ \;
+          when: always
+
+      - store_test_results:
+          name: Store test results
+          path: ~/testrepo11/test-results
+
+      - run:
+          name: Save gradle reports
+          command: |
+            mkdir -p ~/testrepo11/reports/
+            tar cf - */build/reports | (cd ~/testrepo11/reports/; tar xf -)
+          when: always
+
+      - store_artifacts:
+          name: Store gradle reports
+          path: ~/testrepo11/reports
+
 workflows:
+  version: 2
   build-check-and-test:
     jobs:
       - dependencies
@@ -118,5 +166,8 @@ workflows:
           requires:
             - dependencies
       - testjdk8:
+          requires:
+            - dependencies
+      - testjdk11:
           requires:
             - dependencies
